Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Solrdb : SolrDB is a the fastest database search oriented that allows developers to use Apache Solr amazing features with no Application Server needed. It also implementes a new cluster configuration version called SolrCluster that helps building extremely scalable and flexible systems." />
+    <meta name="description" content="Solrdb : The first NoSQL Search Engine over TCP/IP" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/luiscappabanda/SolrDB">View on GitHub</a>
 
           <h1 id="project_title">Solrdb</h1>
-          <h2 id="project_tagline">SolrDB is a the fastest database search oriented that allows developers to use Apache Solr amazing features with no Application Server needed. It also implementes a new cluster configuration version called SolrCluster that helps building extremely scalable and flexible systems.</h2>
+          <h2 id="project_tagline">The first NoSQL Search Engine over TCP/IP</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/luiscappabanda/SolrDB/zipball/master">Download this project as a .zip file</a>
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>SolrDB</h1>
+        <h1>Introduction</h1>
 
 <p>SolrDB is a the fastest database search oriented that allows developers to use Apache Solr amazing features with no Application Server needed. It also implementes a new cluster configuration version called SolrCluster that helps building extremely scalable and flexible systems.</p>
 
